--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "dist/server.js",
   "scripts": {
     "dev": "nodemon src/server.ts",
-    "build": ""
+    "start": "node dist/src/server.js",
+    "build": "rimraf dist && prettier --write src/ && tsc",
+    "postinstall": "npm run build"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
@@ -23,6 +26,7 @@
     "eslint-plugin-promise": "^5.2.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
+    "rimraf": "^3.0.2",
     "sucrase": "^3.20.3",
     "typescript": "^4.6.2"
   },
