--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "dist/server.js",
   "scripts": {
     "dev": "nodemon src/server.ts",
-    "start": "node dist/src/server.js",
-    "build": "rimraf dist && prettier --write src/ && tsc",
+    "start": "npm run build && node dist/src/server.js",
+    "build": "rimraf dist && tsc",
     "postinstall": "npm run build"
   },
   "author": "",
